--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,18 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= data.page.title || "The Middleman" %></title>
-    
+
+    <title><%= data.page.title %> · Guía de estilos de Simplelógica</title>
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag "normalize", "all" %>
+
     <%= javascript_include_tag  "all" %>
   </head>
-  
+
   <body class="<%= page_classes %>">
-    <%= yield %>
+
+    <header>
+      <h1><%= data.page.title || "Guía de estilos de Simplelógica" %></h1>
+    </header>
+
+    <nav id="sidebar">
+
+    </nav>
+
+    <section id="main-content">
+      <%= yield %>
+    </section>
+
+
   </body>
 </html>
