--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <title><%= data.page.title %> · Guía de estilos de Simplelógica</title>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag "normalize", "all" %>
 
@@ -23,7 +23,7 @@
     </header>
 
     <nav id="sidebar">
-
+      <%= partial 'nav' %>
     </nav>
 
     <section id="main-content">
