--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -9,6 +9,10 @@ body {
   max-width: 800px;
 }
 
+a {
+  color: #09f;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Open sans condensed', 'Arial narrow', Arial, Helvetica, sans-serif;
   color: #000;
