--- a/source/_nav.html.erb
+++ b/source/_nav.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <li><%= link_to 'Portada', '/' %>
+  <li><%= link_to 'Índice', '/' %>
   <% guides.each do |guide| %>
     <li>
       <%= link_to guide[:title], guide[:path],
