--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -18,8 +18,21 @@ h1, h2, h3, h4, h5, h6 {
   color: #000;
 }
 
+h1 {
+  font-size: 32px;
+}
+h2 {
+  font-size: 20px;
+  margin: 1em 0 1ex;
+}
+p {
+  font-size: 14px;
+  line-height: 1.4;
+  margin:1em 0;
+}
+
 pre, code, kbd, samp {
-  font: 0.9em 'Menlo', 'Consolas', 'Bitstream Vera Sans mono', monospace;
+  font: 12px 'Menlo', 'Consolas', 'Bitstream Vera Sans mono', monospace;
   background: #fff;
   padding: 2px 5px;
   border: 1px solid #ccc;
@@ -62,9 +75,10 @@ pre code {
   margin: 0;
   border-bottom: 1px solid #333;
 }
+
 #sidebar a {
   display:block;
-  padding: 4px 10px;
+  padding: 6px 10px;
   text-decoration: none;
   color: #ccc;
 }
