--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -7,6 +7,8 @@ body {
   font-family: 'Open sans', Arial, Helvetica, sans-serif;
   margin: 0 20px 50px 285px;
   max-width: 800px;
+  font-size: 14px;
+  line-height: 1.4;
 }
 
 a {
@@ -25,9 +27,7 @@ h2 {
   font-size: 20px;
   margin: 1em 0 1ex;
 }
-p, ul, ol {
-  font-size: 14px;
-  line-height: 1.4;
+p {
   margin:1em 0;
 }
 
