--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,12 @@
+* {
+  -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+}
+
 body {
   background: $bg;
   color: $text;
-  margin: 0 20px 0 285px;
-  font-size: 14px;
-  line-height: 1.4;
 }
 
 .wrapper {
@@ -14,5 +17,18 @@ body {
 }
 
 .page-content {
-  padding-bottom: 120px;
+  padding: 0 20px 0 285px;
+}
+
+.site-footer {
+  @extend .wrapper;
+  margin-top: 120px;
+  border-top: 1px solid $border;
+  .copy {
+    font-size: 16px;
+    color: $text;
+    a {
+      border-bottom: 0;
+    }
+  }
 }
