--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -2,7 +2,7 @@
   background: $dark;
   position: fixed;
   padding: 15px;
-  width: 220px;
+  width: 250px;
   left: 0;
   top: 0;
   bottom: 0;
@@ -14,7 +14,7 @@
   list-style: none;
 }
 .site-nav li {
-  font-size: 22px;
+  font-size: 18px;
   margin: 0;
   border-bottom: 1px solid #333;
 }
@@ -25,7 +25,7 @@
   text-decoration: none;
   color: #ccc;
 }
-.site-nav .current {
+.site-nav .active {
   color: #fff;
   font-weight: bold;
 }
