Crear guía de Git
Añadida la guía de uso de Git según nuestros flujo habitual de trabajo.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
       <li><a href="{{ site.baseurl }}/guias/html.html"{% if page.slug == "html" %} class="active"{% endif %}>HTML</a></li>
       <li><a href="{{ site.baseurl }}/guias/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
       <li><a href="{{ site.baseurl }}/guias/javascript.html"{% if page.slug == "javascript" %} class="active"{% endif %}>Javascript</a></li>
+      <li><a href="{{ site.baseurl }}/guias/git.html"{% if page.slug == "git" %} class="active"{% endif %}>Git</a></li>
     </ul>
   </nav>
 </header>
