Añadimos logo al sidebar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header class="site-header">
   <nav class="site-nav">
+    <a href="{{ site.baseurl }}/" class="logo">Simplelógica</a>
     <ul>
       <li><a href="{{ site.baseurl }}/"{% if page.slug == "home" %} class="active"{% endif %}>Índice</a></li>
       <li><a href="{{ site.baseurl }}/guias/general.html"{% if page.slug == "general" %} class="active"{% endif %}>General</a></li>
