--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -6,6 +6,14 @@
   left: 0;
   top: 0;
   bottom: 0;
+  .logo {
+    display: block;
+    width: 170px;
+    height: 40px;
+    margin: 20px;
+    background: url('/images/logo.png') no-repeat 0 0;
+    font: 0/0 a;
+  }
 }
 
 .site-nav ul {
