Cambio de estilo en el sidebar y reajuste de layout

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,12 +12,12 @@ body {
 .wrapper {
   width: 94%;
   max-width: 1200px;
-  padding: 35px 0;
+  padding: 20px 0 40px;
   margin: 0 auto;
 }
 
 .page-content {
-  padding: 0 20px 0 285px;
+  padding: 0 35px 0 285px;
 }
 
 .site-footer {
