--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
   <nav class="site-nav">
     <a href="{{ site.baseurl }}/" class="logo">Simplelógica</a>
     <ul>
+      <li><h3>Guías de estilo</h3></li>
       <li><a href="{{ site.baseurl }}/estilo/general.html"{% if page.slug == "general" %} class="active"{% endif %}>General</a></li>
       <li><a href="{{ site.baseurl }}/estilo/html.html"{% if page.slug == "html" %} class="active"{% endif %}>HTML</a></li>
       <li><a href="{{ site.baseurl }}/estilo/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
