Estructura de guías de entorno de desarrollo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,11 @@
       <li><a href="{{ site.baseurl }}/estilo/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
       <li><a href="{{ site.baseurl }}/estilo/javascript.html"{% if page.slug == "javascript" %} class="active"{% endif %}>Javascript</a></li>
     </ul>
+    <ul>
+      <li><h3>Entornos de desarrollo</h3></li>
+      <li><a href="{{ site.baseurl }}/guias/osx-general.html"{% if page.slug == "osx-general" %} class="active"{% endif %}>Preparación de Yosemite</a></li>
+      <li><a href="{{ site.baseurl }}/guias/osx-rails.html"{% if page.slug == "osx-rails" %} class="active"{% endif %}>Entorno Rails en OSX</a></li>
+      <li><a href="{{ site.baseurl }}/guias/osx-php.html"{% if page.slug == "osx-php" %} class="active"{% endif %}>Entorno PHP en OSX</a></li>
     </ul>
   </nav>
 </header>
