Forgotten git styleguide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
       <li><a href="{{ site.baseurl }}/estilo/html.html"{% if page.slug == "html" %} class="active"{% endif %}>HTML</a></li>
       <li><a href="{{ site.baseurl }}/estilo/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
       <li><a href="{{ site.baseurl }}/estilo/javascript.html"{% if page.slug == "javascript" %} class="active"{% endif %}>Javascript</a></li>
+      <li><a href="{{ site.baseurl }}/estilo/git.html"{% if page.slug == "git" %} class="active"{% endif %}>Git</a></li>
     </ul>
     <ul>
       <li><h3>Entornos de desarrollo</h3></li>
