nuevo enlace para la guía de estilos de drupal 7

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
       <li><a href="{{ site.baseurl }}/estilo/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
       <li><a href="{{ site.baseurl }}/estilo/javascript.html"{% if page.slug == "javascript" %} class="active"{% endif %}>Javascript</a></li>
       <li><a href="{{ site.baseurl }}/estilo/git.html"{% if page.slug == "git" %} class="active"{% endif %}>Git</a></li>
+      <li><a href="{{ site.baseurl }}/estilo/drupal7.html"{% if page.slug == "drupal7" %} class="active"{% endif %}>Drupal 7</a></li>
     </ul>
     <ul>
       <li><h3>Entornos de desarrollo</h3></li>
