--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,8 @@
       <li><a href="{{ site.baseurl }}/estilo/html.html"{% if page.slug == "html" %} class="active"{% endif %}>HTML</a></li>
       <li><a href="{{ site.baseurl }}/estilo/sass-css.html"{% if page.slug == "css" %} class="active"{% endif %}>SASS/CSS</a></li>
       <li><a href="{{ site.baseurl }}/estilo/javascript.html"{% if page.slug == "javascript" %} class="active"{% endif %}>Javascript</a></li>
+      <li><a href="{{ site.baseurl }}/estilo/assets.html"{% if page.slug == "assets" %} class="active"{% endif %}>Organización de assets</a></li>
+      <li><a href="{{ site.baseurl }}/estilo/estructura-modular.html"{% if page.slug == "estructura-modular" %} class="active"{% endif %}>Estructura modular</a></li>
       <li><a href="{{ site.baseurl }}/estilo/git.html"{% if page.slug == "git" %} class="active"{% endif %}>Git</a></li>
       <li><a href="{{ site.baseurl }}/estilo/drupal7.html"{% if page.slug == "drupal7" %} class="active"{% endif %}>Drupal 7</a></li>
     </ul>
