--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="site-footer">
-  <p class="copy">© 2015 Copyright Simplelógica. Licenciado como <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
+  <p class="copy">© 2016-2017 Copyright Simplelógica. Licenciado como <a href="http://opensource.org/licenses/MIT">MIT License</a>.</p>
 </footer>
