--- a/css/main.scss
+++ b/css/main.scss
@@ -4,11 +4,12 @@
 
 @charset "utf-8";
 
-$bg: #F5F5F5;
+$bg: #fff;
 $link: #F05927;
 $text: #454343;
-$dark: #1E1D1D;
+$dark: #90AC2B;
 $border: #E7E7EC;
+$text-menu: #fff;
 
 @import "normalize";
 @import "base";
