--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -1,54 +1,151 @@
 .site-header {
   background: $dark;
   position: fixed;
-  width: 250px;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  .logo {
-    display: block;
-    width: 170px;
-    height: 40px;
-    margin: 20px;
-    background: url('/images/logo.png') no-repeat 0 0;
-    font: 0/0 a;
+  .site-nav {
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0 0 10px 0;
+      li {
+        margin: 0;
+      }
+    }
+    h3 {
+      background: $link;
+      color: $bg;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 14px;
+      padding: 10px 20px;
+      margin: 0 0 10px 0;
+    }
+    a {
+      display: flex;
+      align-items: center;
+      line-height: 1.35;
+      padding: 8px 15px;
+      margin-left: 10px;
+      font-size: 14px;
+      font-weight: 300;
+      text-decoration: none;
+      color: $text-menu;
+      i {
+        margin-right: 10px;
+      }
+    }
+    .active {
+      background: $bg;
+      color: $dark;
+      font-weight: 500;
+    }
   }
 }
 
-.site-nav {
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+@media only screen and (min-width: 763px) {
+  .logo-mobile {
+    display: none;
   }
-  li {
-    margin: 0;
+  .site-header {
+    width: 250px;
+    top: 0; left: 0; bottom: 0;
+    .site-nav {
+      .site-logo {
+        background: $bg;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%; height: 100px;
+        border-right: 1px solid $dark;
+        .logo {
+          img {
+            width: 190px;
+            margin: 0 auto;
+          }
+        }
+      }
+    }
   }
-  h3 {
-    background: #0E0D0D;
-    color: #999;
-    font-weight: 400;
-    text-transform: uppercase;
-    font-size: 14px;
-    padding: 8px 20px;
-    margin: 10px 0;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
-  }
-  a {
-    font-size: 14px;
-    display: block;
-    line-height: 1.35;
-    padding: 8px 20px;
-    font-weight: 300;
-    text-decoration: none;
-    color: #999;
-  }
-  .active {
-    color: $border;
-    font-weight: 400;
+}
+
+@media only screen and (max-width: 767px) {
+  .site-header {
+    margin: 0 auto;
+    top: 0; right: 0; left: 0;
+    &:before, &:after {
+      content: "";
+      display: table;
+    }
     &:after {
-      content: ' ~';
+      clear: both;
+    }
+    .logo-mobile img {
+      height: 30px;
+      margin: 5px 0 0 10px;
+    }
+    .btn-mobile-menu {
+      display: block;
+      width: 30px;
+      height: 30px;
+      color: white;
+      border-top: 3px solid;
+      margin: 10px 20px 0 0;
+      float: right;
+      position: relative;
+      cursor: pointer;
+      &:before, &:after {
+        content: "";
+        display: block;
+        height: 3px;
+        background: currentColor;
+        margin-top: 6px;
+        position: relative;
+        transition: transform .3s ease;
+      }
+
+      &.active {
+        border-top-color: transparent;
+        &:before {
+          margin-top: 0;
+          transform: rotate(135deg);
+          top: 4px;
+        }
+
+        &:after {
+          margin-top: 0;
+          transform: rotate(45deg);
+          top: 1px;
+        }
+      }
+    }
+    .site-nav {
+      position: fixed;
+      width: 250px; height: 100%;
+      background: $dark;
+      top: 40px;
+      right: 0px;
+      opacity: 0;
+      visibility: hidden;
+      transform: translate3d(250px, 0px, 0px);
+      transition: .3s;
+      &.active {
+        opacity: 1;
+        visibility: visible;
+        transform: translate3d(0px, 0px, 0px);
+      }
+      .site-logo {
+        display: none;
+      }
+      ul {
+        padding: 0 0 20px 0;
+        width: 260px;
+        li {
+          width: 100%;
+        }
+      }
+      h3 {
+        font-weight: 400;
+        font-size: 13px;
+      }
     }
   }
 }
